[gd_scene load_steps=24 format=3 uid="uid://d2ld0c10ukpg1"]

[ext_resource type="Script" path="res://Characters/Playable/Tester/TestCharacter.gd" id="1_xqn73"]
[ext_resource type="Texture2D" uid="uid://drrekw0bk2kly" path="res://Characters/Playable/Tester/testcharidle-sheet.png" id="2_6tm8e"]
[ext_resource type="Texture2D" uid="uid://cxuowjgd1pm7d" path="res://Characters/Playable/Tester/testcharidle.png" id="3_eajhb"]
[ext_resource type="AudioStream" uid="uid://buymab2nl55k4" path="res://Sounds/Player/synthyjump.wav" id="4_rduk6"]
[ext_resource type="AudioStream" uid="uid://c6dwe7rsivu0w" path="res://Sounds/Player/synthydash.wav" id="5_34756"]
[ext_resource type="AudioStream" uid="uid://dqv6kjk2oo4k2" path="res://Sounds/Player/toggledash.mp3" id="6_gkx1g"]
[ext_resource type="AudioStream" uid="uid://dwctqkdqkte01" path="res://Sounds/Player/dashunlock.wav" id="7_2x5oy"]
[ext_resource type="AudioStream" uid="uid://bo7cu51mg0fxk" path="res://Sounds/Player/wallclimbunlock.wav" id="8_h1yrl"]
[ext_resource type="AudioStream" uid="uid://v5qdxia7awch" path="res://Sounds/Player/slideunlock.wav" id="9_t1rw5"]
[ext_resource type="AudioStream" uid="uid://dvd0vj2v2enya" path="res://Sounds/Player/slamunlock.wav" id="10_ottff"]
[ext_resource type="AudioStream" uid="uid://dqp8uuw56gq2k" path="res://Sounds/Player/airjumpunlock.wav" id="11_li7kv"]
[ext_resource type="AudioStream" uid="uid://c4lux45q67ra2" path="res://Sounds/Player/synthyairjump.wav" id="12_b15ef"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_83s8r"]
size = Vector2(14, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2ql7"]
atlas = ExtResource("2_6tm8e")
region = Rect2(100, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq6rp"]
atlas = ExtResource("2_6tm8e")
region = Rect2(0, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3jxa"]
atlas = ExtResource("2_6tm8e")
region = Rect2(20, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5j3kf"]
atlas = ExtResource("2_6tm8e")
region = Rect2(40, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3t65"]
atlas = ExtResource("2_6tm8e")
region = Rect2(60, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6boy"]
atlas = ExtResource("2_6tm8e")
region = Rect2(80, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mgc3"]
atlas = ExtResource("2_6tm8e")
region = Rect2(100, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_432tt"]
atlas = ExtResource("2_6tm8e")
region = Rect2(40, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuk2w"]
atlas = ExtResource("2_6tm8e")
region = Rect2(20, 0, 20, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_a4yyl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2ql7")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq6rp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3jxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5j3kf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3t65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6boy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mgc3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_eajhb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_432tt")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuk2w")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 3
floor_max_angle = 1.0472
floor_snap_length = 0.1
platform_floor_layers = 4294901763
platform_wall_layers = 3
script = ExtResource("1_xqn73")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_83s8r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_a4yyl")
animation = &"idle"

[node name="Jumpsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_rduk6")
volume_db = -10.0

[node name="Dashsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_34756")
volume_db = -10.0

[node name="ToggleDash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_gkx1g")

[node name="PointLight2D" type="PointLight2D" parent="."]

[node name="DashUnlock" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_2x5oy")
volume_db = -10.0

[node name="WallClimbUnlock" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_h1yrl")
volume_db = -10.0

[node name="SlideUnlock" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_t1rw5")
volume_db = -10.0

[node name="SlamUnlock" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ottff")
volume_db = -10.0

[node name="AirJumpUnlock" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_li7kv")
volume_db = -10.0

[node name="Airjumpsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_b15ef")
volume_db = -10.0
